using System;

namespace VuberCore.Entities
{
    public interface IChronometer
    {
        DateTime TimeNow();
    }
}
