namespace VuberCore.Entities
{
    public enum PaymentType
    {
        Cash,
        PaymentCard,
    }
}