namespace VuberCore.Entities
{
    public enum RideStatus
    {
        Looking,
        Waiting,
        InProgress,
        Complete,
        Cancelled,
    }
}