namespace VuberCore.Entities
{
    public enum RideType
    {
        Economy,
        Comfort,
        Business,
    }
}