namespace VuberServer.Clients
{
    public interface IVuberClient
    {
        
    }
}